# A-Sys-I

./: .dockerignore  .env.example  .gitignore  .gitmodules  KNOWN_ISSUES.md  README.md  pyproject.toml  validate_toml.py
configs/: base.yaml  profile_consumer.yaml  profile_hpc.yaml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  prometheus.yml
scripts/: __init__.py  cleanup_shm.py  generate_cpp_header.py  hatch_build_hook.py  run_benchmark.py  run_experiment.py
src/asys_i/: __init__.py  utils.py
src/asys_i/common/: __init__.py  types.py
src/asys_i/components/: __init__.py  activation_hooker.py  archiver.py  data_bus_consumer.py  data_bus_factory.py  data_bus_hpc.py  data_bus_interface.py  ppo_host.py  sae_model.py  sae_trainer.py
src/asys_i/components/managers/: base_manager.py
src/asys_i/hpc/: CMakeLists.txt  __init__.py  gpu_kernels.py  resource_manager.py
src/asys_i/hpc/cpp_ringbuffer/: CMakeLists.txt  README.md  shm_manager.cpp  shm_manager.h  torch_dtype_codes.h
src/asys_i/hpc/python_side/: bus.py  hooks.py
src/asys_i/hpc/src/: bindings.cpp
src/asys_i/monitoring/: __init__.py  monitor_consumer.py  monitor_factory.py  monitor_hpc.py  monitor_interface.py  watchdog.py
src/asys_i/orchestration/: __init__.py  benchmark_suite.py  config_loader.py  pipeline.py
src/asys_i/profile/: hpc_profile.py
tests/: __init__.py  conftest.py  test_placeholder.py
tests/components/: test_activation_hooker.py  test_activation_hooker_revised.py  test_hpc_databus_revised.py  test_hpc_databus_wrapper.py
