[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asys_i"
version = "0.1.0"
description = "A non-invasive observation system for AI model internal dynamics."
authors = [
  { name = "Your Name", email = "you@example.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "pydantic>=2.0",
    "pyyaml",
    "numpy",
    "psutil",
    # Add other dependencies here
]

[project.scripts]
asys-i-run = "asys_i.main:main"
asys-i-cleanup-shm = "scripts.cleanup_shm:main"

[project.urls]
"Homepage" = "https://github.com/your-repo/A-Sys-I"
"Bug Tracker" = "https://github.com/your-repo/A-Sys-I/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/asys_i"]

# Custom build hook configuration
[tool.hatch.build.hooks.custom]
path = "scripts/hatch_build_hook.py"
